--- a/payment.css
+++ b/payment.css
@@ -465,3 +465,23 @@ li
     margin-bottom: 60px;
     margin-top: 30px;
 }
+.navbar
+{
+    background-color: darkslategrey;
+    padding: 10px;
+    border-top: 3px solid skyblue;
+
+}
+.navsec
+{
+    display: flex;
+    width: 80%;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+}
+.navsec>p
+{
+    color: skyblue;
+    font-size: 12px;
+}
