--- a/style.css
+++ b/style.css
@@ -363,3 +363,47 @@ div.box2 img{
 .text{
   font-size: medium;
 }
+
+
+body
+{
+    margin: 0%;
+    padding: 0%;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    background-color: rgb(237, 237, 237);
+}
+h1
+{
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.complete
+{
+    background-color: white;
+    padding: 30px;
+    width: 30%;
+    margin: auto;
+    border-radius: 5px;
+}
+
+button
+{
+    margin-top: 10px;
+    padding: 20px;
+    width: 200px;
+    border: 0ch;
+    border-radius: 3px;
+    background-color: rgb(214, 0, 96);
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: white;
+
+}
+
+button:hover
+{
+    background-color:rgb(255, 0, 115) ;
+    cursor: pointer;
+}
