--- a/Vaibhav/flight.css
+++ b/Vaibhav/flight.css
@@ -57,7 +57,7 @@
 #data>div:last-child{
     display: grid;
     margin: 0px 10px 10px 10px;
-    grid-template-columns: 23% 2% 23% 13% 13% 8%;
+    grid-template-columns: 23% 2% 23% 13% 13% 12%;
     grid-template-rows: 48px;
     gap: 10px;
 }
@@ -65,8 +65,8 @@
     margin: auto;
 }
 #search{
-    height: 48px;
     width: 100px;
+    height: 48px;
     font-size: 16px;
     color: white;
     background-color: #C83259;
@@ -233,4 +233,29 @@
     margin-bottom: 5px;
     font-weight: 100;
     color: #616161;
+}
+
+#toflight
+{
+    margin-top: 10px;
+    padding: 20px;
+    width: 200px;
+    border: 0ch;
+    border-radius: 3px;
+    background-color: rgb(214, 0, 96);
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: white;
+
+}
+
+button:hover
+{
+    background-color:rgb(255, 0, 115) ;
+    cursor: pointer;
+}
+
+#toflight
+{
+  margin-top: 60px;
 }
