--- a/flight.css
+++ b/flight.css
@@ -57,7 +57,7 @@
 #data>div:last-child{
     display: grid;
     margin: 0px 10px 10px 10px;
-    grid-template-columns: 23% 2% 23% 13% 13% 8%;
+    grid-template-columns: 23% 2% 23% 13% 13% 12%;
     grid-template-rows: 48px;
     gap: 10px;
 }
@@ -65,8 +65,8 @@
     margin: auto;
 }
 #search{
-    height: 48px;
     width: 100px;
+    height: 48px;
     font-size: 16px;
     color: white;
     background-color: #C83259;
@@ -235,7 +235,7 @@
     color: #616161;
 }
 
-button
+#toflight
 {
     margin-top: 10px;
     padding: 20px;
